# Colloquium-OP

./: CMakeLists.txt  README.md
include/: factorial.h
src/: factorial.cpp  main.cpp
tests/: factorial_test.cpp
